Adds positioning, introducing bc on position

--- a/deft-arrow-test.html
+++ b/deft-arrow-test.html
@@ -24,19 +24,19 @@
 <body data-ng-app="deft">
     <div class="test-case">
         top - 45 - 15
-        <div data-arrow="{position: 'top', width: 45, height: 15}"></div>
+        <div data-arrow="{side: 'top', width: 45, height: 15}"></div>
     </div>
     <div class="test-case">
         right - 45 - 15
-        <div data-arrow="{position: 'right', width: 45, height: 15}"></div>
+        <div data-arrow="{side: 'right', width: 45, height: 15}"></div>
     </div>
     <div class="test-case">
         bottom - 45 - 15
-        <div data-arrow="{position: 'bottom', width: 45, height: 15}"></div>
+        <div data-arrow="{side: 'bottom', width: 45, height: 15}"></div>
     </div>
     <div class="test-case">
         left - 45 - 15
-        <div data-arrow="{position: 'left', width: 45, height: 15}"></div>
+        <div data-arrow="{side: 'left', width: 45, height: 15}"></div>
     </div>
 </body>
 </html>
